serial4j-API: completed refactor to gradle-cmake